--- a/index.html
+++ b/index.html
@@ -136,19 +136,19 @@
     <div class="icon-container">
         <div>
             <a href="https://porto.vc/residencia_essencial_475232fbff1d49638867a022de2b4fac" class="icon" target="_blank">
-                <img src="C:\Users\felix\Desktop\BHR\seguro_casa.png" alt="Seguro Residencial">
+                <img src="\seguro_casa.png" alt="Seguro Residencial">
             </a>
             <div class="icon-label">Seguro Residencial</div>
         </div>
         <div>
             <a href="https://wwws.portoseguro.com.br/vendaonline/vidamaissimples/home.ns?cod=23d1ded715844de5a161f8c1927c80a0&utm_source=U0215J&utm_medium=geradorLinks&utm_campaign=GeradordeLinks_S440YJ&utm_content=BHR_ASS_E_CORRETORA_DE_SEGUROS&origem=" class="icon" target="_blank">
-                <img src="C:\Users\felix\Desktop\BHR\porto-seguro.png" alt="Seguro Vida">
+                <img src="\porto-seguro.png" alt="Seguro Vida">
             </a>
             <div class="icon-label">Seguro Vida</div>
         </div>
 		<div>
             <a href="C:\Users\felix\Downloads\Petlove_Poc Whats_Portfólio Cliente_OUT24_V2.pdf" class="icon" target="_blank">
-                <img src="C:\Users\felix\Desktop\BHR\seguro_pet.png" alt="Seguro Vida">
+                <img src="\seguro_pet.png" alt="Seguro Vida">
             </a>
             <div class="icon-label">Seguro Pet</div>
         </div>
